# HACKATHON_AFDF

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  METHODOLOGY.md  Makefile  README.md  Start_AFDF.bat  afdf ppt hackathon [Autosaved].pptx  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  result.json  run.sh  tailwind.config.ts  vite.config.ts
entropyguard/: __init__.py  run_scan.py
entropyguard/analysis/: __init__.py  wipe_scan.py
entropyguard/api/: __init__.py  main.py  routes.py
entropyguard/cli/: __init__.py  commands.py
entropyguard/config/: __init__.py  settings.py
entropyguard/core/: __init__.py  byte_entropy.py  disk_reader.py  entropy.py
entropyguard/features/: __init__.py  compression.py  statistical.py
entropyguard/forensics/: __init__.py  exif_extractor.py  reporter.py
entropyguard/pipeline/: __init__.py  cluster.py  processor.py  scanner.py
entropyguard/tools/: __init__.py  bulk_extractor.py  fls.py  fsstat.py  mmls.py  yara_scanner.py
entropyguard/utils/: __init__.py  test_generator.py
entropyguard/visualization/: __init__.py  heatmap.py  html_map.py
results/: all_blocks_1ca24072.csv  forensic_report_1ca24072.json  forensic_report_33459d79.json  forensic_report_FR-33459d79.md  map_1ca24072.html  summary_1ca24072.txt  summary_33459d79.txt  suspicious_regions_1ca24072.csv
scripts/: generate_synthetic.py  run_wipe_scan_demo.sh
server/: entropyguard_server.js  package-lock.json  package.json  server.js
server/ml-api/: main.py  requirements.txt  train_models.py
server/results/: config_1772327490287.json  config_1772327770771.json  config_1772328174899.json  config_1772328758476.json  (+41 more)
server/rust-analyzer/: Cargo.toml
server/rust-analyzer/src/: main.rs
src/: App.tsx  index.css
tests/: test_entropy.py
(+209 files in other folders)
