[package]
name = "afdf-analyzer"
version = "1.0.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
